--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Utilities to interact with Influence",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/Influenceth/influence-utils/issues"
   },
-  "homepage": "https://github.com/Influenceth/influence-utils#readme"
+  "homepage": "https://github.com/Influenceth/influence-utils#readme",
+  "dependencies": {
+    "dayjs": "^1.10.4"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
