--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "influence-utils",
   "version": "1.10.4",
-  "description": "Utilities to interact with Influence",
+  "description": "Influence SDK",
   "type": "module",
   "module": "./build/index.js",
   "exports": {
@@ -11,14 +11,13 @@
   "scripts": {
     "build": "rollup --config ./rollup.config.js",
     "lint": "eslint ./src",
-    "postinstall": "npm run build",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Influenceth/influence-utils.git"
   },
-  "author": "Rise Cooperative",
+  "author": "Unstoppable Games, Inc.",
   "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/Influenceth/influence-utils/issues"
