--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "rollup --config ./rollup.config.js",
     "lint": "eslint ./src",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --recursive"
   },
   "repository": {
     "type": "git",
@@ -44,6 +44,7 @@
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
+    "mathjs": "^11.4.0",
     "starknet": "^4.4.2"
   }
 }
