--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "influence-utils",
-  "version": "1.10.4",
+  "version": "2.0.0-beta.0",
   "description": "Influence SDK",
   "type": "module",
   "module": "./build/index.js",
