--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-env": "^7.19.4",
     "@rollup/plugin-babel": "^6.0.2",
     "acorn-import-assertions": "^1.8.0",
+    "axios": "^1.3.3",
     "chai": "^4.3.6",
     "eslint": "^8.26.0",
     "eslint-config-standard": "^17.0.0",
