--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "build": "rollup --config ./rollup.config.js",
     "lint": "eslint ./src",
     "prepublishOnly": "npm run build",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha --recursive",
-    "postinstall": "patch-package"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --recursive"
   },
   "repository": {
     "type": "git",
@@ -45,14 +44,13 @@
     "eslint-plugin-n": "^15.4.0",
     "eslint-plugin-promise": "^6.1.1",
     "mocha": "^10.0.0",
-    "patch-package": "^7.0.0",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-import-assert": "^2.1.2",
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
+    "@influenceth/astro": "^0.1.2",
     "buffer": "^6.0.3",
-    "cephes": "^1.2.0",
     "mathjs": "^11.4.0",
     "starknet": "^4.4.2"
   }
