--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@influenceth/sdk",
-  "version": "2.0.0-beta.68",
+  "version": "2.0.0-beta.69",
   "description": "Influence SDK",
   "type": "module",
   "module": "./build/index.js",
@@ -52,6 +52,7 @@
   "dependencies": {
     "@influenceth/astro": "^0.2.6",
     "buffer": "^6.0.3",
+    "ethers": "^6.7.1",
     "mathjs": "^11.4.0",
     "starknet": "^5.14.1"
   }
