--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@influenceth/sdk",
-  "version": "2.0.0-beta.94",
+  "version": "2.0.0",
   "description": "Influence SDK",
   "type": "module",
   "module": "./build/index.js",
