--- a/package.json
+++ b/package.json
@@ -27,6 +27,24 @@
     "url": "https://github.com/Influenceth/sdk/issues"
   },
   "homepage": "https://github.com/Influenceth/sdk#readme",
+  "browserslist": {
+    "production": [
+      "chrome 52",
+      "opera 39",
+      "edge 14",
+      "firefox 52",
+      "safari 10.1",
+      "node 7",
+      "ios 10.3",
+      "samsung 6.2",
+      "electron 1.3"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.6",
