--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "export-production-chains": "node ./src/scripts/exportProductionChains.js",
     "lint": "eslint ./src",
     "prepublishOnly": "npm run build",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha --recursive"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --recursive",
+    "publish-sdk": "npm run build && npm publish --access public"
   },
   "repository": {
     "type": "git",
