update npm publish workflow

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,14 +1,9 @@
 name: Build and Publish SDK
 
 on:
-  push:
-    branches:
-      - main
-
-# on:
-#   release:
-#     types:
-#       - published
+  release:
+    types:
+      - published
 
 jobs:
   build-and-publish:
